# litscout

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
input/: research.example.md
litscout/: __init__.py  batcher.py  clean.py  config.py  llm_client.py  main.py  pdf_reader.py  report_writer.py  resources.py
litscout/decide/: __init__.py  paper_store.py  relevance_filter.py  sufficiency_judge.py
litscout/download/: __init__.py  pdf_fetcher.py  temp_manager.py
litscout/prompts/: __init__.py  screening.md  sufficiency.md
litscout/screen/: __init__.py  prompt_builder.py  screener.py
litscout/search/: __init__.py  deduplicator.py  query_generator.py  scholar_client.py
litscout/sources/: __init__.py  arxiv.py  base.py  core.py  elsevier.py  openalex.py  pubmed.py  semantic_scholar.py
litscout/templates/: .env.example  __init__.py  settings.example.yaml
output/: .gitkeep
prompts/: .gitkeep  query_gen.md  research.example.md  research.md
