[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litscout"
dynamic = ["version"]
description = "Automated literature search, screening, and prioritization pipeline powered by LLMs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "jevwithwind"},
]
keywords = ["literature-review", "academic", "research", "llm", "screening", "systematic-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "aiohttp>=3.9",
    "PyMuPDF>=1.24",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
litscout = "litscout.main:cli"

[project.urls]
Homepage = "https://github.com/jevwithwind/litscout"
Repository = "https://github.com/jevwithwind/litscout"
Issues = "https://github.com/jevwithwind/litscout/issues"

[tool.setuptools.packages.find]
include = ["litscout*"]

[tool.setuptools.package-data]
litscout = [
    "templates/*",
    "prompts/*.md",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
